--- a/src/components/founderMsg/FounderMsg.css
+++ b/src/components/founderMsg/FounderMsg.css
@@ -23,7 +23,7 @@
     /* max-w-4xl */
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
+    background-color: #047871;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
     /* shadow-2xl */
     border-radius: 0.75rem;
