--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -32,7 +32,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px 60px 60px 60px;
+  padding:0px 30px 100px 60px;
   flex-wrap: wrap;
   gap: 40px;
   overflow: hidden;
@@ -48,6 +48,7 @@ body {
   line-height: 0.9;
   letter-spacing: 2px;
   margin-bottom: 0.1em;
+  
 }
 
 .hero-red {
@@ -168,6 +169,26 @@ body {
   justify-content: center;
 }
 
+@media (max-width:768px){
+  .cutout-shape {
+  width: 80%;
+  height: 80%;
+  background-color: #07080a;
+  position: relative;
+  overflow: hidden;
+  mask-image: url('/cutout-mask.jpg');
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-image: url('/cutout-mask.jpg');
+  -webkit-mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+}
 /* --- NEW CSS FOR TWO-IMAGE HOVER EFFECT --- */
 /*
   This replaces your old .hero-promo-image rule
@@ -212,7 +233,7 @@ body {
   display: flex;
   align-items: center;
   gap: 60px; /* Space between text and image */
-  padding: 40px 0;
+  padding: 40px 0 170px 0;
   flex-wrap: wrap;
 }
 
@@ -521,8 +542,7 @@ body {
 /* ======================================================= */
 .clients-container {
   max-width: 1500px;
-  margin: 0 auto;
-  padding: 60px 40px;
+  margin: 80px auto;
   text-align: center;
   /* New styles to stack the founder and the grid */
   display: flex;
@@ -541,7 +561,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 60px; /* Space between founder and the team */
+  margin-bottom: 30px; /* Space between founder and the team */
 }
 
 /* Larger image for the founder */
@@ -843,8 +863,11 @@ body {
 @media (max-width: 768px) {
   .hero-section {
     flex-direction: column;
-    padding: 30px 20px;
+    padding: 30px 50px;
     gap: 24px;
+    text-align: left !important;
+    align-items: flex-start !important;
+
   }
 
   .say-hello-btn1 {
@@ -853,12 +876,13 @@ body {
   }
 
   .hero-actions{
-     justify-content: center;
+     justify-content: flex-start !important;
   }
 
   /* Text first, image below */
   .hero-content {
     order: 2;
+    text-align: left !important;
   }
 
   .hero-image-container {
@@ -1059,7 +1083,7 @@ body {
   }
 
   .hero-section {
-    padding: 30px 16px;
+    padding: 30px 40px;
     gap: 24px;
   }
   
