--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -84,7 +84,7 @@
   display: flex;
   flex-direction: column;
   min-width: 200px;
-  z-index: 200;
+  z-index: 100;
   opacity: 0;
   visibility: hidden;
   transform: translateY(10px);
@@ -266,7 +266,7 @@
   align-items: center;
   justify-content: space-between;
   height: 72px;
-  padding: 0 50px;
+  padding: 30px 30px;
 }
 
 .mobile-topbar .logo img {
