--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -36,13 +36,14 @@ img:hover { transform: scale(1.05); }
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
+  padding-left: 30px;
   
 }
 
 
 .health-heading {
-  text-align: center;
   color: #002770;
+  padding-left: 30px;
   font-style: italic;
   margin-top: 15px;
 }
@@ -55,13 +56,13 @@ img:hover { transform: scale(1.05); }
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 20px 70px;
+  padding: 20px 30px;
 }
 
 
 .hero-content {
   max-width: 600px;
-  padding-top: 25px;
+  padding-top: 10px;
   text-align: left;
   position: relative;
   
