--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -688,10 +688,10 @@ body {
 /* FOOTER                                                */
 /* ======================================================= */
 .footer-main1 {
-  max-width: 1700px;
-  margin: 5px 15px;
-  padding: 0px 0px 0px;
-  border-radius: 0px;
+  max-width: 800px;
+  margin: 10px auto;
+  padding: 0px 40px 0px;
+  border-radius: 20px;
   background: #931616;
   display: flex;
   flex-direction: column;
@@ -733,10 +733,10 @@ body {
 
 .footer-bottom-content1 {
   display: flex;
-  padding: 0 40px;
+  padding: 0 20px;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 30px;
 }
 
 .img-fluid{
