--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -81,6 +81,7 @@ img:hover { transform: scale(1.05); }
 
 .hero-content p {
   font-size: 1.2em;
+  line-height:1.5;
   color:#030303
 }
 
@@ -119,7 +120,8 @@ img:hover { transform: scale(1.05); }
   background: #0f766e;
   color: #fff;
   font-weight: 500;
-  padding: 14px 32px;
+  margin-top:3px;
+  padding: 8px 32px;
   border-radius: 32px;
   text-decoration: none;
   transition: all 0.3s ease;
