--- a/src/components/founderMsg/FounderMsg.css
+++ b/src/components/founderMsg/FounderMsg.css
@@ -109,7 +109,7 @@
     /* @apply text-3xl font-bold text-gray-800 mt-4; */
     font-size: 1.875rem;
     font-weight: 700;
-    color: #1f2937;
+    color: white;
     /* text-gray-800 */
     margin-top: 1rem;
 }
@@ -117,7 +117,7 @@
 .founder-role {
     /* @apply text-xl text-teal-600 font-semibold mb-6; */
     font-size: 1.25rem;
-    color: #0d9488;
+    color: rgb(153,246,228);
     /* text-teal-600 */
     font-weight: 600;
 }
