--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 40px;
-  margin: 30px 0;
+  margin: 30px 0 80px 0;
   background-image: linear-gradient(45deg, blue, red);
   border-radius: 25px;
   padding: 20px; /* Add padding to the container */
