--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -40,7 +40,7 @@
   height: 400px;
   border-radius: 30px;
   border: 3px solid green;
-  object-fit: cover;
+  object-fit: fill;
   box-shadow: 0 6px 12px rgba(0, 128, 0, 0.2);
   margin: 0 auto;
   display: block;
@@ -96,7 +96,7 @@
   width: 400px;
   height: 400px;
   border-radius: 20px;
-  object-fit: cover;
+  object-fit: fill;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   transition: transform 0.3s ease;
 }
